ALERT-10: Created the 'Alarm Settings' page ui. Fixed an issue with the static list of directions being modified on page re-entry for the 'create alarm' page.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,8 @@
 
         <activity
             android:name=".activities.alarm.EditAlarm"
-            android:parentActivityName="com.jesseoberstein.alert.activities.alarms.ViewAlarms">
+            android:parentActivityName="com.jesseoberstein.alert.activities.alarms.ViewAlarms"
+            android:windowSoftInputMode="adjustPan">
 
             <intent-filter>
                 <action android:name="android.intent.action.EDIT"/>
