--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,9 @@
-*.iml
-.gradle
-/local.properties
-/.idea/workspace.xml
-/.idea/libraries
 .DS_Store
-/build
-/captures
 
 # Built application files
 *.apk
 *.ap_
+*.jar
 
 # Files for the ART/Dalvik VM
 *.dex
@@ -43,11 +37,7 @@ captures/
 
 # Intellij
 *.iml
-.idea/workspace.xml
-.idea/tasks.xml
-.idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea/
 
 # Keystore files
 *.jks
@@ -62,3 +52,6 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+# Sensitive Data (like api keys)
+sensitive/
