ALERT-26: Created a StationsProvider that gets a list of stations for a route, and includes some logic for getting endpoints too. Updated the gradle build file to install the mbta.jar after a build.

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,14 @@ allprojects {
     }
 }
 
+task updateMBTAJar(type: Copy) {
+    destinationDir = file("app")
+
+    into("libs") {
+        from("mbta/build/libs/mbta.jar")
+    }
+}
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
