--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 
+    // Added to get date/time parsing working.
+    compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support:support-annotations:25.4.0'
     androidTestCompile 'com.android.support.test:runner:1.0.1'
