--- a/mbta/build.gradle
+++ b/mbta/build.gradle
@@ -1,13 +1,17 @@
 apply plugin: 'java-library'
+apply plugin: 'application'
 
 repositories {
     mavenCentral()
 }
 
+mainClassName = 'com.jesseoberstein.mbta.FetchMbtaData'
+
 dependencies {
     compile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
+    compile 'com.github.jasminb:jsonapi-converter:0.8'
 }
 
 jar {
