ALERT-55: Added nickname section. Updated app to use data binding for modifying/creating a user alarm.

--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,5 @@ org.gradle.jvmargs=-Xmx2560M
 # org.gradle.parallel=true
 
 spring.jackson.serialization.write_dates_as_timestamps=false
+
+android.databinding.enableV2=true
