ALERT-39: Created an 'mbta' database and moved 'mbta' module classes into the 'app' module.

--- a/.gitignore
+++ b/.gitignore
@@ -57,4 +57,5 @@ freeline_project_description.json
 sensitive/
 
 # Assets
-app/src/main/assets/
+app/src/main/assets/**
+!app/src/main/assets/mbta.db
