--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
         }
     }
 
+    packagingOptions {
+        exclude 'META-INF/LICENSE'
+    }
+
     dataBinding {
         enabled = true
     }
@@ -35,7 +39,6 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'com.android.support:design:25.4.0'
     compile 'com.android.volley:volley:1.0.0'
@@ -45,6 +48,11 @@ dependencies {
 
     // Added to get date/time parsing working.
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
+    compile 'com.github.jasminb:jsonapi-converter:0.8'
 
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support:support-annotations:25.4.0'
