--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,20 +6,17 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
+        android:name=".MainApplication"
+        android:allowBackup="true"
+        android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name"
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
 
         <activity
             android:name=".activities.routes.ViewRoutes"
             android:launchMode="singleTop">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
             <meta-data
                 android:name="android.app.default_searchable"
                 android:value=".activities.RoutesSearchActivity" />
@@ -43,13 +40,19 @@
         </activity>
 
         <activity
+            android:name=".activities.InitializeMbtaData"
+            android:launchMode="singleTop">
+        </activity>
+
+        <activity
             android:name=".activities.alarms.ViewAlarms"
-            android:launchMode="singleTop"
-            android:parentActivityName="com.jesseoberstein.alert.activities.routes.ViewRoutes">
+            android:launchMode="singleTop">
 
             <intent-filter>
-                <action android:name="android.intent.action.VIEW"/>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.jesseoberstein.alert.activities.routes.ViewRoutes"/>
