--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion "25.0.3"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.3"
 
     defaultConfig {
         applicationId "com.jesseoberstein.alert"
-        minSdkVersion 24
-        targetSdkVersion 25
+        minSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -39,12 +39,9 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:design:25.4.0'
+    compile 'com.android.support:appcompat-v7:27.1.1'
+    compile 'com.android.support:design:27.1.1'
     compile 'com.android.volley:volley:1.0.0'
-
-    compile 'com.j256.ormlite:ormlite-core:4.48'
-    compile 'com.j256.ormlite:ormlite-android:4.48'
 
     // Added to get date/time parsing working.
     compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
@@ -54,16 +51,21 @@ dependencies {
     compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
     compile 'com.github.jasminb:jsonapi-converter:0.8'
 
+    // Room
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
+    implementation "android.arch.persistence.room:runtime:1.0.0"
+    annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
+    implementation "android.arch.lifecycle:common-java8:1.1.1"
+    implementation "android.arch.paging:runtime:1.0.0-rc1"
+
+    // Tests
     testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-annotations:25.4.0'
+    androidTestCompile 'com.android.support:support-annotations:27.1.1'
     androidTestCompile 'com.android.support.test:runner:1.0.1'
     androidTestCompile 'com.android.support.test:rules:1.0.1'
-    // Optional -- Mockito
     testCompile 'org.mockito:mockito-core:1.10.19'
-    // Optional -- Hamcrest library
     androidTestCompile 'org.hamcrest:hamcrest-library:1.3'
-    // Optional -- UI testing with Espresso
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
-    // Optional -- UI testing with UI Automator
     androidTestCompile 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+    testImplementation "android.arch.persistence.room:testing:1.0.0"
 }
