ALERT-73: Added support for updating an alarm.

--- a/app/src/debug/AndroidManifest.xml
+++ b/app/src/debug/AndroidManifest.xml
@@ -9,6 +9,11 @@
         android:theme="@style/AppTheme">
 
         <activity
+            android:name=".activities.InitializeMbtaData"
+            android:launchMode="singleTop">
+        </activity>
+
+        <activity
             android:name=".activities.alarms.ViewAlarmsMock"
             android:launchMode="singleTop">
 
