--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,6 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 27
-    buildToolsVersion "27.0.3"
     testBuildType "staging"
 
     defaultConfig {
@@ -34,6 +33,17 @@ android {
         }
     }
 
+    sourceSets {
+        androidTest {
+            assets.srcDirs = ['src/androidTest/assets', 'src/staging/assets']
+            java.srcDirs = ['src/main/java', 'src/androidTest/java', 'src/staging/java']
+        }
+
+        test {
+            assets.srcDirs = []
+            java.srcDirs = ['src/main/java', 'src/test/java']
+        }
+    }
     packagingOptions {
         exclude 'META-INF/LICENSE'
     }
@@ -55,7 +65,7 @@ android {
 dependencies {
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.volley:volley:1.0.0'
+    implementation 'com.android.volley:volley:1.1.1'
 
     // Added to get date/time parsing working.
     implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
@@ -86,11 +96,12 @@ dependencies {
     ////////////////////////////////////////////////////////////////////////
     // Test Dependencies
     ////////////////////////////////////////////////////////////////////////
-
-    testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support:support-annotations:27.1.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
+
+    // JUnit
+    testImplementation 'junit:junit:4.12'
 
     // Mockito
     testImplementation 'org.mockito:mockito-core:2.6.3'
@@ -99,7 +110,7 @@ dependencies {
     // Hamcrest Matchers
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
 
-    // Espresso
+    // UI Testing
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
     androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
