Migrate to AndroidX

--- a/gradle.properties
+++ b/gradle.properties
@@ -20,4 +20,7 @@ org.gradle.jvmargs=-Xmx2560M
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 
-android.databinding.enableV2=true
+android.useAndroidX=true
+
+# Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
