--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 30
     testBuildType "staging"
+    buildToolsVersion "30.0.2"
 
     defaultConfig {
         applicationId "com.jesseoberstein.alert"
         minSdkVersion 26
-        targetSdkVersion 27
+        targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         javaCompileOptions {
             annotationProcessorOptions {
                 arguments = ["room.schemaLocation": "app/src/debug/schemas"]
@@ -48,8 +51,8 @@ android {
         exclude 'META-INF/LICENSE'
     }
 
-    dataBinding {
-        enabled = true
+    buildFeatures {
+        dataBinding true
     }
 
     dexOptions {
@@ -60,20 +63,25 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    useLibrary 'android.test.base'
+    useLibrary 'android.test.mock'
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'com.google.android.material:material:1.3.0'
 
-    // Added to get date/time parsing working.
-    implementation 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+    // Volley
+    implementation 'com.android.volley:volley:1.2.0'
 
     // Jackson
-    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0'
-    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0'
-    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.11.4'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.11.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.4'
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.11.4'
 
     // JSON Api
     implementation 'com.github.jasminb:jsonapi-converter:0.8'
@@ -81,40 +89,61 @@ dependencies {
     // Room
     implementation "android.arch.lifecycle:viewmodel:1.1.1"
     implementation "android.arch.persistence.room:runtime:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation "android.arch.lifecycle:common-java8:1.1.1"
     implementation "android.arch.paging:runtime:1.0.1"
+    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
 
     // Dagger
     implementation 'com.google.dagger:dagger:2.17'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
     implementation 'com.google.dagger:dagger-android:2.17'
     implementation 'com.google.dagger:dagger-android-support:2.17'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.17'
 
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:27.0.0')
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-analytics'
+
+    // Lombok
+    compileOnly 'org.projectlombok:lombok:1.18.20'
+    annotationProcessor 'org.projectlombok:lombok:1.18.20'
 
     ////////////////////////////////////////////////////////////////////////
     // Test Dependencies
     ////////////////////////////////////////////////////////////////////////
-    androidTestImplementation 'com.android.support:support-annotations:27.1.1'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test:rules:1.0.2'
+    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.mockito:mockito-core:2.6.3'
 
-    // JUnit
-    testImplementation 'junit:junit:4.12'
+    // Room
+    testImplementation "android.arch.persistence.room:testing:1.1.1"
+
+    // Lombok
+    testCompileOnly 'org.projectlombok:lombok:1.18.20'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+
+    ////////////////////////////////////////////////////////////////////////
+    // AndroidTest Dependencies
+    ////////////////////////////////////////////////////////////////////////
+    androidTestImplementation 'androidx.test:core:1.3.0'
+    androidTestImplementation 'androidx.test:runner:1.3.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'junit:junit:4.13.2'
+
+    // UI Testing
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
     // Mockito
-    testImplementation 'org.mockito:mockito-core:2.6.3'
+    androidTestImplementation 'org.mockito:mockito-core:2.6.3'
     androidTestImplementation 'org.mockito:mockito-android:2.6.3'
 
     // Hamcrest Matchers
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
 
-    // UI Testing
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.2'
-    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
-
-    // Room
-    testImplementation "android.arch.persistence.room:testing:1.1.1"
+    // Lombok
+    androidTestCompileOnly 'org.projectlombok:lombok:1.18.20'
+    androidTestAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
 }
