--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'com.google.gms.google-services'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -15,11 +16,14 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.jesseoberstein.alert.config.InstrumentationTestRunner"
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments = ["room.schemaLocation": "app/src/debug/schemas"]
+                arguments += [
+                        "room.incremental": "true",
+                        "room.schemaLocation": "app/src/debug/schemas"
+                ]
             }
         }
     }
@@ -41,7 +45,7 @@ android {
 
     sourceSets {
         androidTest {
-            assets.srcDirs = ['src/androidTest/assets', 'src/staging/assets']
+            assets.srcDirs = ['src/androidTest/assets']//, 'src/staging/assets']
             java.srcDirs = ['src/main/java', 'src/androidTest/java', 'src/staging/java']
         }
 
@@ -72,10 +76,20 @@ android {
 }
 
 dependencies {
+    def room_version = "2.3.0"
+    def lifecycle_version = "2.3.1"
+    def paging_version = "3.0.0"
+    def lombok_version = "1.18.20"
+    def mockito_version = "3.10.0"
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
+
+    // Lombok
+    compileOnly "org.projectlombok:lombok:$lombok_version"
+    annotationProcessor "org.projectlombok:lombok:$lombok_version"
 
     // Volley
     implementation 'com.android.volley:volley:1.2.0'
@@ -89,42 +103,38 @@ dependencies {
     // JSON Api
     implementation 'com.github.jasminb:jsonapi-converter:0.8'
 
-    // Room
-    implementation "android.arch.lifecycle:viewmodel:1.1.1"
-    implementation "android.arch.persistence.room:runtime:1.1.1"
-    implementation "android.arch.lifecycle:common-java8:1.1.1"
-    implementation "android.arch.paging:runtime:1.0.1"
-    implementation "android.arch.persistence.room:rxjava2:1.1.1"
-    annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
+    // Android Lifecycle
+    implementation "androidx.lifecycle:lifecycle-viewmodel:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation "androidx.paging:paging-runtime:$paging_version"
 
-    // Dagger
-    implementation 'com.google.dagger:dagger:2.17'
-    implementation 'com.google.dagger:dagger-android:2.17'
-    implementation 'com.google.dagger:dagger-android-support:2.17'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.17'
-    annotationProcessor 'com.google.dagger:dagger-android-processor:2.17'
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "androidx.room:room-rxjava3:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    annotationProcessor "com.google.dagger:hilt-compiler:$hilt_version"
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:27.0.0')
     implementation 'com.google.firebase:firebase-messaging'
     implementation 'com.google.firebase:firebase-analytics'
 
-    // Lombok
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
-
     ////////////////////////////////////////////////////////////////////////
     // Test Dependencies
     ////////////////////////////////////////////////////////////////////////
     testImplementation 'junit:junit:4.13.2'
-    testImplementation 'org.mockito:mockito-core:2.6.3'
+    testImplementation "org.mockito:mockito-core:$mockito_version"
 
     // Room
-    testImplementation "android.arch.persistence.room:testing:1.1.1"
+    testImplementation "androidx.room:room-testing:$room_version"
 
     // Lombok
-    testCompileOnly 'org.projectlombok:lombok:1.18.20'
-    testAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+    testCompileOnly "org.projectlombok:lombok:$lombok_version"
+    testAnnotationProcessor "org.projectlombok:lombok:$lombok_version"
 
     ////////////////////////////////////////////////////////////////////////
     // AndroidTest Dependencies
@@ -141,13 +151,17 @@ dependencies {
     androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
     // Mockito
-    androidTestImplementation 'org.mockito:mockito-core:2.6.3'
-    androidTestImplementation 'org.mockito:mockito-android:2.6.3'
+    androidTestImplementation "org.mockito:mockito-core:$mockito_version"
+    androidTestImplementation "org.mockito:mockito-android:$mockito_version"
+
+    // Hilt
+    androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
+    androidTestAnnotationProcessor "com.google.dagger:hilt-android-compiler:$hilt_version"
 
     // Hamcrest Matchers
     androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
 
     // Lombok
-    androidTestCompileOnly 'org.projectlombok:lombok:1.18.20'
-    androidTestAnnotationProcessor 'org.projectlombok:lombok:1.18.20'
+    androidTestCompileOnly "org.projectlombok:lombok:$lombok_version"
+    androidTestAnnotationProcessor "org.projectlombok:lombok:$lombok_version"
 }
