--- a/build.gradle
+++ b/build.gradle
@@ -4,10 +4,15 @@ buildscript {
     repositories {
         jcenter()
         google()
+        mavenCentral()
     }
+
+    ext.hilt_version = '2.36'
+
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'com.google.gms:google-services:4.3.5'
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
@@ -15,6 +20,7 @@ allprojects {
     repositories {
         jcenter()
         google()
+        mavenCentral()
     }
 }
 
